crates/noesis-api/tests/snapshots/error_response_snapshot_tests__auth_error.snap
---
source: crates/noesis-api/tests/error_response_snapshot_tests.rs
expression: json
---
{
  "contract_version": "v1",
  "details": {
    "reason": "bad token"
  },
  "error": "Authentication error: bad token",
  "error_code": "AUTH_ERROR",
  "message": "Authentication error: bad token",
  "status": 401,
  "trace_id": "snapshot-trace"
}
