crates/noesis-api/tests/snapshots/error_response_snapshot_tests__bridge_error.snap
---
source: crates/noesis-api/tests/error_response_snapshot_tests.rs
expression: json
---
{
  "contract_version": "v1",
  "error": "An internal bridge error occurred",
  "error_code": "BRIDGE_ERROR",
  "message": "An internal bridge error occurred",
  "status": 500,
  "trace_id": "snapshot-trace"
}
