crates/noesis-api/tests/snapshots/error_response_snapshot_tests__calculation_error.snap
---
source: crates/noesis-api/tests/error_response_snapshot_tests.rs
expression: json
---
{
  "contract_version": "v1",
  "error": "An internal calculation error occurred",
  "error_code": "CALCULATION_ERROR",
  "message": "An internal calculation error occurred",
  "status": 500,
  "trace_id": "snapshot-trace"
}
