crates/noesis-api/tests/snapshots/error_response_snapshot_tests__config_error.snap
---
source: crates/noesis-api/tests/error_response_snapshot_tests.rs
expression: json
---
{
  "contract_version": "v1",
  "error": "An internal configuration error occurred",
  "error_code": "CONFIG_ERROR",
  "message": "An internal configuration error occurred",
  "status": 500,
  "trace_id": "snapshot-trace"
}
