crates/noesis-api/tests/snapshots/error_response_snapshot_tests__engine_not_found.snap
---
source: crates/noesis-api/tests/error_response_snapshot_tests.rs
expression: json
---
{
  "contract_version": "v1",
  "details": {
    "engine_id": "missing"
  },
  "error": "Engine not found: missing",
  "error_code": "ENGINE_NOT_FOUND",
  "message": "Engine not found: missing",
  "status": 404,
  "trace_id": "snapshot-trace"
}
