crates/noesis-api/tests/snapshots/error_response_snapshot_tests__rate_limit_exceeded.snap
---
source: crates/noesis-api/tests/error_response_snapshot_tests.rs
expression: json
---
{
  "contract_version": "v1",
  "error": "Rate limit exceeded",
  "error_code": "RATE_LIMIT_EXCEEDED",
  "message": "Rate limit exceeded",
  "status": 429,
  "trace_id": "snapshot-trace"
}
