crates/noesis-api/tests/snapshots/error_response_snapshot_tests__swiss_ephemeris_error.snap
---
source: crates/noesis-api/tests/error_response_snapshot_tests.rs
expression: json
---
{
  "error": "An internal ephemeris error occurred",
  "error_code": "SWISS_EPHEMERIS_ERROR",
  "message": "An internal ephemeris error occurred",
  "status": 500,
  "trace_id": "snapshot-trace"
}
