crates/noesis-api/tests/snapshots/error_response_snapshot_tests__validation_error.snap
---
source: crates/noesis-api/tests/error_response_snapshot_tests.rs
expression: json
---
{
  "contract_version": "v1",
  "details": {
    "validation_message": "date must be ISO-8601"
  },
  "error": "Validation error: date must be ISO-8601",
  "error_code": "VALIDATION_ERROR",
  "message": "Validation error: date must be ISO-8601",
  "status": 422,
  "trace_id": "snapshot-trace"
}
