crates/noesis-api/tests/snapshots/error_response_snapshot_tests__workflow_not_found.snap
---
source: crates/noesis-api/tests/error_response_snapshot_tests.rs
expression: json
---
{
  "details": {
    "workflow_id": "birth-blueprint"
  },
  "error": "Workflow not found: birth-blueprint",
  "error_code": "WORKFLOW_NOT_FOUND",
  "message": "Workflow not found: birth-blueprint",
  "status": 404,
  "trace_id": "snapshot-trace"
}
